--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li><a href="grupos-de-atendimento.html" target="_self">Grupos de Atendimento</a></li>
     
         <li id="logo-item">
-           <a href="index.html" target="_self"> <img src="assets/img/logo.png" id="logo" alt="Logo GApsi Global"></a>
+           <a href="index.html" target="_self"> <img src="assets/img/logo.png" id="logo" alt="Logo Gapsi Global"></a>
         </li>
     
         <li><a href="investimento.html" target="_self">Investimento</a></li>
