atualização dos grupos de atendimento

--- a/grupos-de-atendimento.html
+++ b/grupos-de-atendimento.html
@@ -135,7 +135,7 @@
         <section id="grupo-transtornos-alimentares">
             <h3>Grupo de Pessoas com Transtornos Alimentares - Bulimia e Anorexia</h3>
             <p>Este grupo é dedicado a quem lida com transtornos alimentares como bulimia e anorexia, que impactam profundamente a saúde física e mental. O grupo oferece um espaço seguro para compartilhar medos, desafios e técnicas de recuperação. Os temas incluem:
-<ul>
+<ul class="grupos-apoio">
      <li>Bulimia nervosa: caracterizada por episódios de compulsão alimentar seguida de comportamentos compensatórios, como vômito ou uso de laxantes. O grupo ajuda a interromper esses ciclos e promover estratégias de controle e recuperação.</li>
       <li>Anorexia nervosa: envolve restrição alimentar extrema, medo de ganhar peso e passar da imagem corporal. O apoio do grupo busca restaurar a saúde física, reconstruir uma imagem corporal positiva e desenvolver hábitos equilibrados. Os participantes recebem suporte para lidar com crises emocionais, construir uma autoimagem positiva e fortalecer o bem-estar mental, físico e emocional.</li>
 </ul>
@@ -152,7 +152,7 @@
         <section id="grupo-profissionais-saude">
             <h3>Grupo Destinado a Profissionais da Saúde e Seus Desafios</h3>
             <p>Este grupo é voltado para profissionais da saúde que lidam com os desafios emocionais e o estresse da prática diária. Em um ambiente seguro, os participantes podem:
-<ul>
+<ul class="grupos-apoio">
    <li>Compartilhar experiências: expressando inseguranças e conquistas, promovendo a troca de vivências e aprendizados.</li>
    <li>Refletindo sobre pressão e burnout: discutindo sinais de burnout e estratégias para lidar com o estresse.</li>
     <li>Explorar práticas de autocuidado: promovendo o bem-estar e a conexão com suas motivações profissionais. O grupo fortalece a empatia e a escuta ativa, incentivando o suporte mútuo e a resiliência para que cuidem de si enquanto cuidam dos outros.</li> 
@@ -202,7 +202,7 @@
         <section id="grupo-reintegracao-social">
             <h3>Grupo de Reintegração Social</h3>
             <p>Este grupo é voltado para ex-presidiários em busca de apoio emocional e orientação social para sua reintegração. Em um ambiente seguro, os participantes discutem temas como:
-<ul>	
+<ul class="grupos-apoio">	
    <li>Resgate da autoestima e identidade pessoal: construindo uma nova visão de si, garantindo habilidades e potencial.</li>
 <li>Fortalecimento emocional: desenvolvendo técnicas para lidar com a ansiedade e o estresse.</li>
 <li>Planejamento de vida: estabelecendo metas pessoais e profissionais realistas.</li>
@@ -219,7 +219,7 @@
         <section id="grupo-familia-detentos">
             <h3>Grupo de Apoio para Famílias de Detentos</h3>
             <p>Este grupo acolhe familiares que enfrentam o desafio de ter um ente querido privado de liberdade, oferecendo um espaço seguro para compartilhar vivências e receber apoio emocional. Trabalhamos temas como:
-<ul>
+<ul class="grupos-apoio">
   <li>Apoio emocional: técnicas para lidar com o impacto psicológico.</li>
   <li>Fortalecimento de vínculos familiares: fortalecendo laços durante e após o período de detenção.</li> 
   <li>Orientação sobre direitos e visitas: informações práticas sobre direitos e regras.</li>
