--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer id="footer">
         <p>&copy; 2024 Gapsi. Todos os direitos reservados.</p>
     </footer>
 
