--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 GApsi Global. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Gapsi Global. Todos os direitos reservados.</p>
     </footer>
 
     <!-- Link para o JavaScript -->
