--- a/investimento.html
+++ b/investimento.html
@@ -64,10 +64,9 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 GApsi Global. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Gapsi Global. Todos os direitos reservados.</p>
     </footer>
 
-    <!-- Link para o JavaScript -->
-    <script src="../scripts/script.js"></script>
+
 </body>
 </html>
