Alterações no JS de contato e criação dos links de redes sociais

--- a/grupos-de-atendimento.html
+++ b/grupos-de-atendimento.html
@@ -189,8 +189,8 @@
  </div>     
  <div>     
         <section id="grupo-dependencia-jogos">
-            <h3>Grupo de Apoio para Pessoas com Dependência de Jogos</h3>
-            <p>Este grupo oferece um ambiente seguro e acolhedor para quem busca lidar com a dependência de jogos. Os participantes compartilham experiências, aprendem a enfrentar impulsos e trabalham para restaurar o equilíbrio na rotina. O suporte coletivo ajuda a construir habilidades de autocontrole, fortalecer a autoestima e manter o controle sobre suas próprias escolhas.</p>
+            <h3>Grupo de Apoio para Pessoas com Dependência em Apostas</h3>
+            <p>Este grupo é um espaço seguro e acolhedor para quem busca ajuda para lidar com a dependência em apostas, que pode afetar significativamente relacionamentos, saúde mental e equilíbrio financeiro. Aqui, os participantes compartilham experiências e encontram apoio para desenvolver estratégias de controle, restaurar o equilíbrio em suas vidas e resgatar o controle sobre suas decisões. O grupo trabalha habilidades de autocontrole, fortalecimento da autoestima e planejamento financeiro, promovendo um ambiente de empatia e compreensão para superar esse desafio.</p>
         </section>
  </div>     
  <div>     
