--- a/contato.html
+++ b/contato.html
@@ -43,7 +43,8 @@
                 <input type="text" id="assunto" name="assunto" required>
 
                 <label for="mensagem">Mensagem:</label>
-                <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
+                <textarea id="mensagem" maxlength="500"></textarea>
+                <div id="contador">500 caracteres restantes</div>
 
                 <button type="submit">Enviar</button>
             </form>
@@ -51,7 +52,12 @@
             <div class="informacoes-contato">
                 <h2>Outras formas de contato:</h2>
                 <p>E-mail: <a href="mailto:gapsiglobal@gmail.com">gapsiglobal@gmail.com</a></p>
-                <p>Telefone: <a href="tel:+5531999999999">(31) 99999-9999</a></p>
+                <p>Telefone: <a href="tel:+553191336128">(31) 9133-6128</a></p>
+             <div class="icone-links">
+                <a href="https://wa.me/5531991336128?text=Ol%C3%A1!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20a%20respeito%20da%20psicoterapia%20em%20grupo." target="_blank"><img src="assets/icons/whatsapp.png" alt="Whatsapp" id="whatsapp"></img></a>
+                <a href="https://www.instagram.com/gapsiglobal/" target="_blank"><img src="assets/icons/instagram.png" alt="Instagram" id="instagram"></img></a>
+                <a href="https://youtube.com/@gapsiglobal?si=sTuezlIJZFrZYMKa" target="_blank"><img src="assets/icons/youtube.png" alt="Youtube" id="youtube"></img></a>   
+                </div>
             </div>
         </section>
     </main>
