js e php de contatos, cadastro, login e criação da função de recuperação de senha

--- a/cadastro.html
+++ b/cadastro.html
@@ -53,10 +53,10 @@
             <p>O cadastro garante uma experiência segura e eficiente na Gapsi Global, facilitando o processo de inscrição, pagamentos e organização de documentos. Se tiver dúvidas, entre em contato conosco pelo e-mail <a href="mailto:gapsiglobal@gmail.com">gapsiglobal@gmail.com</a>.</p>
         </section>
 
-        <!-- Formulário de Cadastro -->
-       <section id="form-cadastro">
+<!-- Formulário de Cadastro -->
+<section id="form-cadastro">
     <h2>Formulário de Cadastro</h2>
-    <form action="processar-cadastro.php" method="POST">
+    <form action="../scripts/php/script_cadastro.php" method="POST">
         <label for="nome">Nome Completo:</label>
         <input type="text" id="nome" name="nome" required placeholder="Digite seu nome completo">
 
