--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
     <main>
         <section id="login-form">
             <h2>Faça seu Login</h2>
-            <form action="processar-login.php" method="POST">
+            <form action="../scripts/php/login.php" method="POST">
                 <label for="email">E-mail:</label>
                 <input type="email" id="email" name="email" required>
                 
@@ -44,7 +44,8 @@
                 <input type="submit" value="Entrar">
             </form>
 
-            <p>Ainda não tem uma conta? <a href="cadastro.html">Registre-se aqui</a>.</p>
+            <p>Ainda não tem uma conta? <a href="cadastro.html">Registre-se aqui</a> ou
+             <a href="recuperar-senha.html" target="_blank">clique aqui</a> se esqueceu a senha.</p>
         </section>
     </main>
 
@@ -53,6 +54,6 @@
     </footer>
 
     <!-- Link para o JavaScript -->
-    <script src="../scripts/script.js"></script>
+    <script src="../scripts/js/script_login"></script>
 </body>
 </html>
