--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Gapsi</title>    
-
+   <link rel="icon" type="image/ico" href="assets/icons/logo.ico"> 
+    <title>Gapsi</title>        
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,6 +19,9 @@
     <header>
         
  <nav>
+           <button id="menu-toggle" aria-label="Abrir Menu">
+            ☰
+        </button>
     <ul class="menu">
         <li><a href="index.html" target="_self">Home</a></li>
         <li><a href="quem-somos.html" target="_self">Quem Somos</a></li>
@@ -34,6 +37,8 @@
         <li><a href="contato.html" target="_self">Contato</a></li>
     </ul>
 </nav>
+
+
     </header>
     
 
@@ -52,5 +57,6 @@
     <footer id="footer">
         <p>&copy; 2024 Gapsi. Todos os direitos reservados.</p>
     </footer>    
+<script src="scripts/js/menu_script.js"></script>
 </body>
 </html>
