--- a/grupos-de-atendimento.html
+++ b/grupos-de-atendimento.html
@@ -14,6 +14,9 @@
     <header>
        
  <nav>
+           <button id="menu-toggle" aria-label="Abrir Menu">
+            ☰
+        </button>
     <ul class="menu">
         <li><a href="index.html" target="_self">Home</a></li>
         <li><a href="quem-somos.html" target="_self">Quem Somos</a></li>
@@ -234,6 +237,6 @@
     <footer>
         <p>&copy; 2024 Gapsi Global. Todos os direitos reservados.</p>
     </footer>
-
+<script src="scripts/js/menu_script.js"></script>
 </body>
 </html>
