--- a/quem-somos.html
+++ b/quem-somos.html
@@ -13,6 +13,9 @@
 <body>
     <header>
  <nav>
+           <button id="menu-toggle" aria-label="Abrir Menu">
+            ☰
+        </button>
     <ul class="menu">
         <li><a href="index.html" target="_self">Home</a></li>
         <li><a href="quem-somos.html" target="_self">Quem Somos</a></li>
@@ -96,6 +99,6 @@
     <footer>
         <p>&copy; 2024 Gapsi Global. Todos os direitos reservados.</p>
     </footer>
-
+<script src="scripts/js/menu_script.js"></script>
 </body>
 </html>
